[gd_scene load_steps=94 format=2]

[ext_resource path="res://Art Src/BossArt/ZhuRong/zhurong_idle_no_fire.png" type="Texture" id=1]
[ext_resource path="res://GameScripts/Boss Scripts/ZhuRong.gd" type="Script" id=2]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameScns/Hitboxes&Hurtboxes/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameScns/Hitboxes&Hurtboxes/HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art Src/BossArt/ZhuRong/zhurong_raise_staff_no_Fire.png" type="Texture" id=6]
[ext_resource path="res://Art Src/BossArt/ZhuRong/zhurong_sword.png" type="Texture" id=7]
[ext_resource path="res://GameScripts/Boss Scripts/FireBall.gd" type="Script" id=8]
[ext_resource path="res://GameScripts/Boss Scripts/LavaPond.gd" type="Script" id=9]
[ext_resource path="res://GameScripts/Boss Scripts/FireBeam.gd" type="Script" id=10]
[ext_resource path="res://Art Src/BossArt/ZhuRong/zhurong_move_sword_down.png" type="Texture" id=11]
[ext_resource path="res://Art Src/BossArt/ZhuRong/zhurong_swing_sword.png" type="Texture" id=12]
[ext_resource path="res://SoundEffects/ZhuRong_second_phase.wav" type="AudioStream" id=13]

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 640, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 896, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 180, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 360, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 540, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 720, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 900, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1080, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1260, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1440, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1620, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 720, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 900, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1080, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1260, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1440, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1620, 0, 180, 200 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1800, 0, 180, 200 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 91 ), SubResource( 92 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=68]
resource_name = "Hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "Idle"
length = 0.8
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=32]
resource_name = "MeleeAttack"
length = 1.25
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 19, 20, 21, 22, 23, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_melee_attack"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.52, 0.92 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=45]
resource_name = "Move"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=33]
resource_name = "MoveStaff"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 10, 10, 10, 11, 11, 12, 13 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "handle_magic_cast"
} ]
}

[sub_resource type="Animation" id=34]
resource_name = "MoveSword"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 16, 15 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=100]
resource_name = "RageMeleeAttack"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 24, 25, 26, 27, 28, 29, 26, 27, 28, 29, 26, 27, 28, 29, 26, 27, 28, 29, 26, 27, 28, 29, 30, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 1.8, 2, 2.1, 2.3, 2.4, 2.6, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_melee_attack"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 0.6
loop = true

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=51]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "Idle"

[sub_resource type="AnimationNodeBlendSpace2D" id=53]
blend_point_0/node = SubResource( 49 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 50 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 51 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 52 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=60]
animation = "MeleeAttack"

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "MeleeAttack"

[sub_resource type="AnimationNodeAnimation" id=62]
animation = "MeleeAttack"

[sub_resource type="AnimationNodeAnimation" id=63]
animation = "MeleeAttack"

[sub_resource type="AnimationNodeBlendSpace2D" id=54]
blend_point_0/node = SubResource( 60 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 61 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 62 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 63 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "Move"

[sub_resource type="AnimationNodeAnimation" id=57]
animation = "Move"

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "Move"

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "Move"

[sub_resource type="AnimationNodeBlendSpace2D" id=55]
blend_point_0/node = SubResource( 56 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 57 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 58 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 59 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=69]
animation = "MoveStaff"

[sub_resource type="AnimationNodeAnimation" id=70]
animation = "MoveStaff"

[sub_resource type="AnimationNodeAnimation" id=71]
animation = "MoveStaff"

[sub_resource type="AnimationNodeAnimation" id=72]
animation = "MoveStaff"

[sub_resource type="AnimationNodeBlendSpace2D" id=73]
blend_point_0/node = SubResource( 69 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 70 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 71 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 72 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeAnimation" id=102]
animation = "RageMeleeAttack"

[sub_resource type="AnimationNodeAnimation" id=103]
animation = "RageMeleeAttack"

[sub_resource type="AnimationNodeAnimation" id=104]
animation = "RageMeleeAttack"

[sub_resource type="AnimationNodeAnimation" id=105]
animation = "RageMeleeAttack"

[sub_resource type="AnimationNodeBlendSpace2D" id=106]
blend_point_0/node = SubResource( 102 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 103 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 104 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 105 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeStateMachineTransition" id=64]

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachineTransition" id=74]

[sub_resource type="AnimationNodeStateMachineTransition" id=75]

[sub_resource type="AnimationNodeStateMachineTransition" id=76]

[sub_resource type="AnimationNodeStateMachineTransition" id=77]

[sub_resource type="AnimationNodeStateMachineTransition" id=78]

[sub_resource type="AnimationNodeStateMachineTransition" id=79]

[sub_resource type="AnimationNodeStateMachineTransition" id=107]

[sub_resource type="AnimationNodeStateMachineTransition" id=108]

[sub_resource type="AnimationNodeStateMachine" id=47]
states/Idle/node = SubResource( 53 )
states/Idle/position = Vector2( 172.5, 75 )
states/MeleeAttack/node = SubResource( 54 )
states/MeleeAttack/position = Vector2( 377.875, 185.062 )
states/Move/node = SubResource( 55 )
states/Move/position = Vector2( 376, 75.75 )
states/MoveStaff/node = SubResource( 73 )
states/MoveStaff/position = Vector2( 268.75, -31.9688 )
states/RageMelee/node = SubResource( 106 )
states/RageMelee/position = Vector2( 672.09, 76.4375 )
transitions = [ "Idle", "Move", SubResource( 64 ), "Move", "Idle", SubResource( 65 ), "MoveStaff", "Idle", SubResource( 74 ), "Idle", "MoveStaff", SubResource( 75 ), "Move", "MeleeAttack", SubResource( 76 ), "MeleeAttack", "Move", SubResource( 77 ), "Move", "MoveStaff", SubResource( 78 ), "MoveStaff", "Move", SubResource( 79 ), "Move", "RageMelee", SubResource( 107 ), "RageMelee", "Move", SubResource( 108 ) ]
start_node = "Idle"
graph_offset = Vector2( -81.66, -59.0625 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=48]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 111.5, 119.469 )

[sub_resource type="CapsuleShape2D" id=101]
radius = 134.0
height = 122.0

[node name="ZhuRong" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 499
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4, -127 )
scale = Vector2( 2.36719, 2.36719 )
frames = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
playback_speed = 1.54
anims/Hurt = SubResource( 68 )
anims/Idle = SubResource( 16 )
anims/MeleeAttack = SubResource( 32 )
anims/Move = SubResource( 45 )
anims/MoveStaff = SubResource( 33 )
anims/MoveSword = SubResource( 34 )
anims/RESET = SubResource( 8 )
anims/RageMeleeAttack = SubResource( 100 )
anims/idle = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 47 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 48 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/MeleeAttack/blend_position = Vector2( -1.00126, -0.00472105 )
parameters/Move/blend_position = Vector2( 0, 0 )
parameters/MoveStaff/blend_position = Vector2( 0, 0 )
parameters/RageMelee/blend_position = Vector2( 0, 0 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 1000

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_mask = 434

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -1.5, -102.469 )
shape = SubResource( 17 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_layer = 1024
collision_mask = 5

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1, -122 )
rotation = 1.5708
shape = SubResource( 101 )
disabled = true

[node name="FireBall" type="KinematicBody2D" parent="."]
script = ExtResource( 8 )

[node name="LavaPond" type="KinematicBody2D" parent="."]
position = Vector2( 0, -1 )
script = ExtResource( 9 )

[node name="FireBeam" type="KinematicBody2D" parent="."]
script = ExtResource( 10 )

[node name="Second_phase" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[connection signal="half_health" from="Stats" to="." method="_on_Stats_half_health"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
